tests/sawn/fixtures/invalid/06_tab_indentation.sawn
// INVALID: Tab indentation (must use 2 spaces)
config
	host="localhost"
